# audio-file-tools

./: .gitignore  CMakeLists.txt  README.md
inc/: WavUtils.h
inc/AudioFileTools/: WavConfiguration.h  WavReader.h  WavWriter.h
src/: WavReader.cpp  WavUtils.cpp  WavWriter.cpp
test/: WavWriterTest.cpp
